[tool.poetry]
name = "moviecenter"
version = "0.1.0"
description = ""
authors = ["Eli Lutsky"]


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
pymongo = "^4.2.0"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
mypy = "^0.982"
isort = "^5.10.1"
black = "^22.8.0"
flake8 = "^5.0.4"
pytest-docker = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120